testsuite/tests/grammar/invalid_lkt/annotated_grammar_1.lkt
import lexer_example

@foo grammar foo_grammar {}
